--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- Add your site or application content here -->
         
-        <div class="wrapper">
+        <div class="wrapper topHalf">
             <header class="box">
                 <h1>
                     <a href="">
@@ -44,7 +44,7 @@
             </section>
         </div>
 
-        <div class="wrapper">
+        <div class="wrapper middle">
             <section class="content">
                 <section class="main">
                     <h3>Welcome</h3>
@@ -53,9 +53,15 @@
                     <aside class="sidebar">
                         <h4>Next Events</h4>
                         <ol>
-                           <li>Sydney</li> 
-                           <li>Melbourne</li> 
-                           <li>Nimbin</li> 
+                           <li>Sydney
+                            <span class="date">12/06/2013</span>
+                           </li> 
+                           <li>Melbourne
+                            <span class="date">12/06/2013</span>
+                           </li> 
+                           <li>Nimbin
+                            <span class="date">12/06/2013</span>
+                           </li> 
                        </ol>
                     </aside>
                 </section>
